@@ -1,5 +1,15 @@
 $Id$
             
+2007-06-16: datafun.lisp, misc.lisp: Added (datafun-match exp
+            pattern -body-), which (a), at macro expansion time, makes
+            sure, if the pattern begins with a symbol, that it begins
+            with the right symbol and (b), at run time, signals a
+            standard "Ill formed" error if the pattern doesn't match.
+
+            setter.lisp: If (!=/ sym ...) finds that sym is unbound,
+            it asks the user if the intention is really to set the
+            symbol before proceeding.
+
             [- Version 2.1.33 -]
 2007-06-10: object.lisp: Allow :clos and :clos-object as synonyms for
             :object. 
